  situations where its not present (GAE). Fixes #36.
* Avoid timing attacks on hash comparison.
* Provide abstract base for MemoryNamespaceManager that deals with
  "dictionaries".
* Added tests for invalidating cache, and fixed bug with function cache when
  no args are present.
* The SQLAlchemy backends require SQLAlchemy 0.4 or greater (0.6 recommended).

Release 1.5.1 (12/17/2009)
==========================

* Fix cache namespacing.

Release 1.5 (11/23/2009)
========================

* Update memcached to default to using pylibmc when available.
* Fix bug when cache value doesn't exist causing has_key to throw
  an exception rather than return False. Fixes #24.
* Fix bug where getpid under GAE is used improperly to assume it
  should be a non-string. Fixes #22.
* Add cache_region decorator that works *before* configuration of
  the cache regions have been completed for use in module-level
  decorations.
* Fix bug where has_value sees the value before its removed.
* Improved accuracy of "dogpile" checker by removing dependency
  on "self" attributes, which seem to be slightly unreliable
  in highly concurrent scenarios.

Release 1.4.2 (9/25/2009)
=========================

* Fix bug where memcached may yank a value after the has_value but before
  the value can be fetched.
* Fix properties for setting the path. Fixes #15.
* Fix the 'TypeError: argument must be an int, or have a fileno()
  method' erorr sporadically emitted by FileSynchronizer under moderate
  load.

Release 1.4.1 (9/10/2009)
=========================

* Fix verification of options to throw an error if a beaker param is an
  empty string.
* Add CacheManager.invalidate function to easily invalidate cache
  spaces created by the use of the cache decorator.
* Add CacheManager.region_invalidate function to easily invalidate cache
  spaces created by the use of the cache_region decorator.
* Fix the InvalidCryptoBackendError exception triggering a TypeError. Patch
  from dz, fixes #13.
