@@ -20,8 +20,5 @@ class LockError(BeakerException):
     pass
 
 
-class InvalidCryptoBackendError(BeakerException, ImportError):
-
-    def __init__(self):
-        Exception.__init__(self,
-                           'No supported crypto implementation was found')
+class InvalidCryptoBackendError(BeakerException):
+    pass
